Atualização do Site

--- a/Protótipo_de_telas/cestado.html
+++ b/Protótipo_de_telas/cestado.html
@@ -5,12 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        Nome do Estado:
-        <input type="text" name="estado" size="25" />
-        UF:
-        <input type="text" name="uf" size="5" /><br><br>
-        <input type="submit" value="Cadastrar Estado">
-        <input type="reset" value="Limpar Dados">
+        <form name="Estado" action="cadastrando.php" method="POST"><br>
+            Nome do Estado:
+            <input type="text" name="estado" size="25" />
+            UF:
+            <input type="text" name="uf" size="5" /><br><br>
+            <input type="submit" value="Cadastrar Estado">
+            <input type="reset" value="Limpar Dados">
+        </form>
     </body>
 </html>
 			
