--- a/Protótipo_de_telas/index.html
+++ b/Protótipo_de_telas/index.html
@@ -8,12 +8,29 @@
     
     <body>
         <div class="menu">
-            <ul>
-                <li><a href="inicial.html" target="Frame">INFO STORE</a></li>
-                <li><a href="pessoa.html" target="Frame">Cadastro de Pessoa</a></li>  
-                <li><a href="cestado.html" target="Frame">Cadastro Estado</a></li>
-                <li><a href="ccidade.html" target="Frame">Cadastro Cidade</a></li>           
-            </ul>           
+            <nav>
+                <ul>
+                    <li><a href="inicial.html" target="Frame">Home</a></li>
+                    <li><a href="#">Cadastro Produto</a>
+                    <ul>
+                        <li><a href="ccategoria.html" target="Frame">Categoria</a></li>
+                        <li><a href="cproduto.html" target="Frame">Produto</a></li>
+                    </ul>
+                    </li>
+                    <li><a href="#">Cadastro Endereço</a>
+                    <ul>
+                        <li><a href="cestado.html" target="Frame">Estado</a></li>
+                        <li><a href="ccidade.html" target="Frame">Cidade</a></li>
+                    </ul>
+                    </li>
+                    <li><a href="#">Cadastro Pessoa</a>
+                    <ul>
+                        <li><a href="fisica.html" target="Frame">Física</a></li>
+                        <li><a href="juridica.html" target="Frame">Jurídica</a></li>
+                    </ul>
+                    </li>
+                </ul>
+            </nav>
         </div>
         <div>
             <iframe name="Frame" src="inicial.html"></iframe>      
