--- a/Protótipo_de_telas/inicial.html
+++ b/Protótipo_de_telas/inicial.html
@@ -7,6 +7,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>BEM-VINDO AO PAINEL ADMINISTRATIVO INFO STORE</h1>
+        <br><br><h1>BEM-VINDO AO PAINEL ADMINISTRATIVO INFO STORE</h1>
     </body>
 </html>
