--- a/Protótipo_de_telas/ccategoria.html
+++ b/Protótipo_de_telas/ccategoria.html
@@ -1,12 +1,12 @@
 <html>
     <head>
         <title>Cadastro de Categoria</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/corpo.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <form name="Categoria" action="cadastrando.php" method="POST"><br>
+        <form name="Categoria" action="cadcategoria.php" method="POST">
             Nome da Categoria:
             <input type="text" name="categ" size="25"/><br><br>
             Descrição:<br>
