--- a/Protótipo_de_telas/ccidade.html
+++ b/Protótipo_de_telas/ccidade.html
@@ -5,14 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        Nome da Cidade:
-        <input type="text" name="cidade" size="30" />
-        UF:
-        <select name="estados">
-            <option value=""></option>
-        </select><br><br>
-        <input type="submit" value="Cadastrar Cidade">
-        <input type="reset" value="Limpar Dados">
+        <form name="Cidade" action="cadcidade.php" method="POST">
+            Nome da Cidade:
+            <input type="text" name="cidade" size="30" />
+            UF:
+            <select name="estados">
+                <option value=""></option>
+            </select><br><br>
+            <input type="submit" value="Cadastrar Cidade">
+            <input type="reset" value="Limpar Dados">
+        </form>
     </body>
 </html>
 			
