--- a/Protótipo_de_telas/cestado.html
+++ b/Protótipo_de_telas/cestado.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <form name="Estado" action="cadastrando.php" method="POST"><br>
+        <form name="Estado" action="cadestado.php" method="POST">
             Nome do Estado:
             <input type="text" name="estado" size="25" />
             UF:
