--- a/Protótipo_de_telas/cpfisica.html
+++ b/Protótipo_de_telas/cpfisica.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        <form id="pessoa" name="Pessoa" action="cadastrando.php" method="POST">
+        <form id="pessoa" name="Pessoa" action="cadfisica.php" method="POST">
             <div>
                 Cliente
                 <input type="radio" name="radio1" value="cliente"/>
@@ -53,8 +53,8 @@
                 <input type="text" name="login" disabled="true" size="25" />
                 Senha:
                 <input type="password" name="senha" disabled="true" size="25" /><br><br>
-                <input type="submit" value="Cadastrar"/>
-                <input type="reset" value="Limpar"/>
+                <input type="submit" value="Cadastrar Pessoa"/>
+                <input type="reset" value="Limpar Dados"/>
             </div>
         </form>
         <script src="js/radio.js"></script>
