--- a/Protótipo_de_telas/index.html
+++ b/Protótipo_de_telas/index.html
@@ -10,7 +10,7 @@
         <div class="menu">
             <nav>
                 <ul>
-                    <li><a href="inicial.html" target="Frame">Home</a></li>
+                    <li><a href="home.html" target="Frame">Home</a></li>
                     <li><a href="#">Cadastro Produto</a>
                     <ul>
                         <li><a href="ccategoria.html" target="Frame">Categoria</a></li>
@@ -25,8 +25,8 @@
                     </li>
                     <li><a href="#">Cadastro Pessoa</a>
                     <ul>
-                        <li><a href="fisica.html" target="Frame">Física</a></li>
-                        <li><a href="juridica.html" target="Frame">Jurídica</a></li>
+                        <li><a href="cpfisica.html" target="Frame">Física</a></li>
+                        <li><a href="cpjuridica.html" target="Frame">Jurídica</a></li>
                     </ul>
                     </li>
                 </ul>
