3 CRUD SIMPLES/2CRUD N-1

--- a/Protótipo_de_telas/index.html
+++ b/Protótipo_de_telas/index.html
@@ -11,7 +11,7 @@
         <div class="menu">
             <nav>
                 <ul>
-                    <li><a href="home.php" target="Frame">Home</a></li>
+                    <li><a href="home.html" target="Frame">Home</a></li>
                     <li><a href="#">Cadastros</a>
                         <ul>
                             <li><a href="#">Gerenciar Pessoas</a>
@@ -34,20 +34,12 @@
                                 </ul>
                             </li>
                         </ul>
-                    </li>
-                    <li><a href="#">Relatórios</a>
-                        <ul>
-                            <li><a href="#.php" target="Frame">Clientes(Física)</a></li>
-                            <li><a href="#.php" target="Frame">Clientes(Juridica)</a></li>
-                            <li><a href="#.php" target="Frame">Fornecedor</a></li>
-                            <li><a href="#.php" target="Frame">Produtos</a></li>
-                        </ul>
-                    </li>   
+                    </li>  
                 </ul>
             </nav>
         </div>
         <div>
-            <iframe name="Frame" src="home.php"></iframe>      
+            <iframe name="Frame" src="home.html"></iframe>      
         </div>
     </body>
 </html>
