--- a/Protótipo_de_telas/index.html
+++ b/Protótipo_de_telas/index.html
@@ -34,7 +34,30 @@
                                 </ul>
                             </li>
                         </ul>
-                    </li>  
+                    </li>
+                    <li><a href="#">Buscas</a>
+                        <ul>
+                            <li><a href="#">Buscar Pessoas</a>
+                                <ul>
+                                    <li><a href="#" >Física</a></li>
+                                    <li><a href="selPJuridica.php" target="Frame">Jurídica</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Buscar Produto</a>
+                                <ul>
+                                    <li><a href="selCategoria.php" target="Frame">Categoria</a></li>
+                                    <li><a href="selSecao.php" target="Frame">Seção</a></li>
+                                    <li><a href="selProduto.php" target="Frame">Produto</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Buscar Endereço</a>
+                                <ul>
+                                    <li><a href="selEstado.php" target="Frame">Estado</a></li>
+                                    <li><a href="selCidade.php" target="Frame">Cidade</a></li>                                    
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </div>
