Finalização do Projeto

--- a/Protótipo_de_telas/index.html
+++ b/Protótipo_de_telas/index.html
@@ -12,7 +12,7 @@
             <nav>
                 <ul>
                     <li><a href="home.html" target="Frame">Home</a></li>
-                    <li><a href="#">Cadastros</a>
+                    <li><a href="#">Cadastros </a>
                         <ul>
                             <li><a href="#">Gerenciar Pessoas</a>
                                 <ul>
@@ -35,7 +35,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a href="#">Buscas</a>
+                    <li><a href="#">Buscas </a>
                         <ul>
                             <li><a href="#">Buscar Pessoas</a>
                                 <ul>
@@ -56,6 +56,12 @@
                                     <li><a href="selCidade.php" target="Frame">Cidade</a></li>                                    
                                 </ul>
                             </li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Relatórios </a>
+                        <ul>
+                            <li><a href="relProdEst.php" target="Frame">Relatório de Vendas por Estado</a></li>
+                            <li><a href="relCompFunc.php" target="Frame">Relatório de Compra por Funcionário</a></li>
                         </ul>
                     </li>
                 </ul>
